syntax="proto3";

package api;

import "google/protobuf/empty.proto";

option go_package = "github.com/Imm0bilize/gunshot-telegram-notifier/pkg/api";

service ClientService{
  rpc CreateClientV1(CreateClientRequest) returns (google.protobuf.Empty);
  rpc DeleteClientV1(DeleteClientRequest) returns (google.protobuf.Empty);
}


message CreateClientRequest{
  string client_id  = 1;
  int64 chat_id = 2;
}

message DeleteClientRequest{
  string client_id  = 1;
}

